# save-your-tokens

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: generate_dataset.py  run_benchmark.py
benchmarks/data/: agentic_session.jsonl  results.csv
benchmarks/fixtures/: qa_session.json
docs/: ADAPTERS.md  DESIGN.md  SPEC.md  benchmark.md  progress.md
docs/superpowers/plans/: 2026-03-22-phase1a-unit-tests.md  2026-03-22-phase2-ecosystem-expansion.md
docs/superpowers/specs/: 2026-03-22-phase2-ecosystem-expansion-design.md
src/save_your_tokens/: __init__.py
src/save_your_tokens/adapters/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  openai.py
src/save_your_tokens/cli/: __init__.py  main.py
src/save_your_tokens/core/: __init__.py  budget.py  lifecycle.py  spec.py  strategy.py
src/save_your_tokens/integrations/: __init__.py  base.py  claude_code.py  langchain.py  raw_sdk.py
src/save_your_tokens/reuse/: __init__.py  compactor.py  compression.py  observability.py  tokenizers.py
src/save_your_tokens/skills/: __init__.py  loader.py  registry.py
tests/test_adapters/: test_deepseek.py  test_gemini.py
tests/test_cli/: test_main.py
tests/test_core/: test_budget.py  test_lifecycle.py  test_spec.py  test_strategy.py
tests/test_integrations/: test_claude_code.py  test_langchain.py  test_raw_sdk.py
tests/test_reuse/: test_compactor.py  test_observability.py
tests/test_skills/: test_loader.py  test_registry.py
