[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "save-your-tokens"
version = "0.1.0"
description = "Application-layer context budget management framework for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "zzhou23" }]
keywords = ["llm", "context", "token", "budget", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30"]
openai = ["openai>=1.0", "tiktoken>=0.7"]
deepseek = ["openai>=1.0", "tiktoken>=0.7"]
gemini = ["google-genai>=1.0"]
langfuse = ["langfuse>=2.0"]
langchain = ["langchain-core>=0.3"]
local = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["save-your-tokens[claude,openai,deepseek,gemini,langfuse,langchain,local]"]

[project.scripts]
syt = "save_your_tokens.cli.main:cli"

[project.urls]
Homepage = "https://github.com/zzhou23/save-your-tokens"
Repository = "https://github.com/zzhou23/save-your-tokens"
Issues = "https://github.com/zzhou23/save-your-tokens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/save_your_tokens"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=save_your_tokens --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["save_your_tokens"]
mypy_path = "src"
